<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:id="@+id/imageview_poster"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:contentDescription="@string/sample_poster_content" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingEnd="2dp"
            android:paddingLeft="5dp"
            android:paddingRight="2dp"
            android:paddingStart="5dp">

            <TextView
                android:id="@+id/textview_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/sample_movie_title"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/textview_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="18sp"
                android:text="@string/sample_release_date" />

            <TextView
                android:id="@+id/textview_ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="18sp"
                android:text="@string/sample_movie_rating" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:padding="5dp"
                android:text="@string/sample_movie_synopsis" />

        </ScrollView>
    </LinearLayout>
</LinearLayout>

